--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1379,6 +1379,12 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  display: none;
+}
+@media (max-width: 768px) {
+  .cid-sVgRQAv9WD .embla__button {
+    display: none;
+  }
 }
 .cid-sVgRQAv9WD .embla__button:disabled {
   cursor: default;
