--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -941,6 +941,11 @@ a {
 .cid-sVgDtdAJL7 .navbar.collapsed.opened .dropdown-menu {
   top: 0;
 }
+@media (min-width: 992px) {
+  .cid-sVgDtdAJL7 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
 .cid-sVgDtdAJL7 .navbar.collapsed .dropdown-menu .dropdown-submenu {
   left: 0 !important;
 }
