--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -679,6 +679,113 @@ body {
 a {
   transition: color 0.6s;
 }
+.cid-sVh4pE3Wy4 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #fafafa;
+}
+.cid-sVh4pE3Wy4 .carousel {
+  height: 800px;
+}
+.cid-sVh4pE3Wy4 .carousel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.cid-sVh4pE3Wy4 .carousel-item,
+.cid-sVh4pE3Wy4 .carousel-inner {
+  height: 100%;
+}
+.cid-sVh4pE3Wy4 .carousel-caption {
+  bottom: 40px;
+}
+.cid-sVh4pE3Wy4 .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-sVh4pE3Wy4 .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-sVh4pE3Wy4 .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-sVh4pE3Wy4 .item-wrapper {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-sVh4pE3Wy4 .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-sVh4pE3Wy4 .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-sVh4pE3Wy4 .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-sVh4pE3Wy4 .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-sVh4pE3Wy4 .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sVh4pE3Wy4 .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-sVh4pE3Wy4 .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-sVh4pE3Wy4 .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-sVh4pE3Wy4 .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-sVh4pE3Wy4 .carousel-indicators li.active,
+.cid-sVh4pE3Wy4 .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-sVh4pE3Wy4 .carousel-indicators li::after,
+.cid-sVh4pE3Wy4 .carousel-indicators li::before {
+  content: none;
+}
+.cid-sVh4pE3Wy4 .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-sVh4pE3Wy4 .carousel-indicators {
+    display: none !important;
+  }
+}
 .cid-sVgyufaNWu {
   padding-top: 0rem;
   padding-bottom: 0rem;
@@ -882,7 +989,7 @@ a {
 }
 .cid-sVgDtdAJL7 .dropdown-menu,
 .cid-sVgDtdAJL7 .navbar.opened {
-  background: #fafafa !important;
+  background: #ffffff !important;
 }
 .cid-sVgDtdAJL7 .nav-item:focus,
 .cid-sVgDtdAJL7 .nav-link:focus {
@@ -917,7 +1024,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #fafafa;
+  background: #ffffff;
 }
 .cid-sVgDtdAJL7 .navbar.opened {
   transition: all 0.3s;
@@ -1062,7 +1169,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sVgDtdAJL7 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #fafafa;
+  background: #ffffff;
 }
 .cid-sVgDtdAJL7 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -1167,7 +1274,7 @@ a {
 .cid-sVgRQAv9WD {
   padding-top: 5rem;
   padding-bottom: 6rem;
-  background-color: #fafafa;
+  background-color: #f5f5f5;
 }
 .cid-sVgRQAv9WD img,
 .cid-sVgRQAv9WD .item-img {
