--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -679,70 +679,52 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-sVgyufaNWu {
+.cid-ugO3Wku0Ne {
   padding-top: 0rem;
-  padding-bottom: 0rem;
+  padding-bottom: 1rem;
   background-color: #ffffff;
 }
-@media (min-width: 992px) {
-  .cid-sVgyufaNWu .carousel {
-    min-height: 700px;
-  }
-  .cid-sVgyufaNWu .carousel img {
-    max-height: 700px;
-    object-fit: contain;
-  }
+.cid-ugO3Wku0Ne .carousel {
+  height: 29rem;
 }
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-sVgyufaNWu .carousel {
-    min-height: 455px;
-  }
-  .cid-sVgyufaNWu .carousel img {
-    max-height: 455px;
-    object-fit: contain;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sVgyufaNWu .carousel {
-    min-height: 385px;
-  }
-  .cid-sVgyufaNWu .carousel img {
-    max-height: 385px;
-    object-fit: contain;
-  }
-  .cid-sVgyufaNWu .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-sVgyufaNWu .content-slider-wrap {
-    width: 100% !important;
-  }
-}
-.cid-sVgyufaNWu .carousel,
-.cid-sVgyufaNWu .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-sVgyufaNWu .item-wrapper {
+.cid-ugO3Wku0Ne .carousel img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.cid-sVgyufaNWu .carousel-caption {
-  bottom: 40px;
+.cid-ugO3Wku0Ne .carousel-item,
+.cid-ugO3Wku0Ne .carousel-inner {
+  height: 100%;
 }
-.cid-sVgyufaNWu .carousel-control:hover {
+.cid-ugO3Wku0Ne .carousel-caption {
+  bottom: 20px;
+}
+.cid-ugO3Wku0Ne .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-ugO3Wku0Ne .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-ugO3Wku0Ne .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
-.cid-sVgyufaNWu .mobi-mbri-arrow-next {
-  margin-left: 5px;
+.cid-ugO3Wku0Ne .item-wrapper {
+  width: 100%;
 }
-.cid-sVgyufaNWu .mobi-mbri-arrow-prev {
-  margin-right: 5px;
+@media (max-width: 767px) {
+  .cid-ugO3Wku0Ne .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-ugO3Wku0Ne .content-slider-wrap {
+    width: 100% !important;
+  }
 }
-.cid-sVgyufaNWu .container .carousel-indicators {
+.cid-ugO3Wku0Ne .container .carousel-indicators {
   margin-bottom: 3px;
 }
-.cid-sVgyufaNWu .carousel-control {
+.cid-ugO3Wku0Ne .carousel-control {
   top: 50%;
   width: 60px;
   height: 60px;
@@ -753,26 +735,26 @@ a {
   border-radius: 50%;
   transition: all 0.3s;
 }
-.cid-sVgyufaNWu .carousel-control.carousel-control-prev {
+.cid-ugO3Wku0Ne .carousel-control.carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-sVgyufaNWu .carousel-control.carousel-control-next {
+.cid-ugO3Wku0Ne .carousel-control.carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
 @media (max-width: 767px) {
-  .cid-sVgyufaNWu .carousel-control {
+  .cid-ugO3Wku0Ne .carousel-control {
     top: auto;
     bottom: 1rem;
   }
 }
-.cid-sVgyufaNWu .carousel-indicators {
+.cid-ugO3Wku0Ne .carousel-indicators {
   position: absolute;
   bottom: 0;
   margin-bottom: 1.5rem !important;
 }
-.cid-sVgyufaNWu .carousel-indicators li {
+.cid-ugO3Wku0Ne .carousel-indicators li {
   max-width: 15px;
   height: 15px;
   width: 15px;
@@ -784,15 +766,15 @@ a {
   opacity: 0.5;
   transition: all 0.3s;
 }
-.cid-sVgyufaNWu .carousel-indicators li.active,
-.cid-sVgyufaNWu .carousel-indicators li:hover {
+.cid-ugO3Wku0Ne .carousel-indicators li.active,
+.cid-ugO3Wku0Ne .carousel-indicators li:hover {
   opacity: 0.9;
 }
-.cid-sVgyufaNWu .carousel-indicators li::after,
-.cid-sVgyufaNWu .carousel-indicators li::before {
+.cid-ugO3Wku0Ne .carousel-indicators li::after,
+.cid-ugO3Wku0Ne .carousel-indicators li::before {
   content: none;
 }
-.cid-sVgyufaNWu .carousel-indicators.ie-fix {
+.cid-ugO3Wku0Ne .carousel-indicators.ie-fix {
   left: 50%;
   display: block;
   width: 60%;
@@ -800,9 +782,12 @@ a {
   text-align: center;
 }
 @media (max-width: 768px) {
-  .cid-sVgyufaNWu .carousel-indicators {
+  .cid-ugO3Wku0Ne .carousel-indicators {
     display: none !important;
   }
+}
+.cid-ugO3Wku0Ne H5 {
+  text-align: center;
 }
 .cid-sVgDtdAJL7 {
   z-index: 1000;
