--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1359,30 +1359,427 @@ a {
     margin-right: 2rem !important;
   }
 }
-.cid-sVgSporUkS {
+.cid-sWoTECBqyd {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background: #fafafa;
+}
+.cid-sWoTECBqyd .team-card {
+  margin-bottom: 2rem;
+  transition: all 0.3s;
+}
+.cid-sWoTECBqyd .team-card:hover {
+  transform: translateY(-10px);
+}
+.cid-sWoTECBqyd .card-wrap {
+  background: #ffffff;
+  border-radius: 4px;
+}
+@media (max-width: 991px) {
+  .cid-sWoTECBqyd .card-wrap {
+    margin-bottom: 2rem;
+  }
+}
+.cid-sWoTECBqyd .card-wrap .image-wrap img {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .cid-sWoTECBqyd .card-wrap .content-wrap {
+    padding: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sWoTECBqyd .card-wrap .content-wrap {
+    padding: 1rem;
+  }
+}
+.cid-sWoTECBqyd .social-row {
+  text-align: center;
+}
+.cid-sWoTECBqyd .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-sWoTECBqyd .social-row .soc-item .mbr-iconfont {
+  transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+}
+.cid-sWoTECBqyd .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-sWoTECBqyd .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+.cid-sWoTECBqyd .embla__slide {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-width: 410px;
+  max-width: 410px;
+}
+@media (max-width: 768px) {
+  .cid-sWoTECBqyd .embla__slide {
+    min-width: 70%;
+    max-width: initial;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
+}
+.cid-sWoTECBqyd .embla__button--next,
+.cid-sWoTECBqyd .embla__button--prev {
+  display: flex;
+}
+.cid-sWoTECBqyd .embla__button {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .cid-sWoTECBqyd .embla__button {
+    display: none;
+  }
+}
+.cid-sWoTECBqyd .embla__button:disabled {
+  cursor: default;
+  display: none;
+}
+.cid-sWoTECBqyd .embla__button:hover {
+  background: #000;
+  color: rgba(255, 255, 255, 0.5);
+}
+.cid-sWoTECBqyd .embla__button.embla__button--prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sWoTECBqyd .embla__button.embla__button--next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-sWoTECBqyd .embla__button {
+    top: auto;
+  }
+}
+.cid-sWoTECBqyd .embla {
+  position: relative;
+  width: 100%;
+}
+.cid-sWoTECBqyd .embla__viewport {
+  overflow: hidden;
+  width: 100%;
+}
+.cid-sWoTECBqyd .embla__viewport.is-draggable {
+  cursor: grab;
+}
+.cid-sWoTECBqyd .embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+.cid-sWoTECBqyd .embla__container {
+  display: flex;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.cid-sWoTFwmYkM {
   padding-top: 6rem;
   padding-bottom: 6rem;
   background-color: #ffffff;
 }
-.cid-sVgSporUkS .mbr-overlay {
-  background-color: #ffffff;
-  opacity: 0.4;
-}
-.cid-sVgSporUkS form .mbr-section-btn {
-  text-align: center;
+.cid-sWoTFwmYkM img,
+.cid-sWoTFwmYkM .item-img {
   width: 100%;
 }
-.cid-sVgSporUkS form .mbr-section-btn .btn {
-  display: inline-flex;
+.cid-sWoTFwmYkM .item:focus,
+.cid-sWoTFwmYkM span:focus {
+  outline: none;
 }
-@media (max-width: 991px) {
-  .cid-sVgSporUkS form .mbr-section-btn .btn {
-    width: 100%;
+.cid-sWoTFwmYkM .item-wrapper {
+  position: relative;
+}
+.cid-sWoTFwmYkM .slide-content {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  overflow: hidden;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-sWoTFwmYkM .slide-content .item-content {
+    padding: 2rem 2rem 0;
+  }
+  .cid-sWoTFwmYkM .slide-content .item-footer {
+    padding: 0 2rem 2rem;
   }
 }
-.cid-sVgRWmAe8H {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #232323;
+@media (max-width: 991px) {
+  .cid-sWoTFwmYkM .slide-content .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-sWoTFwmYkM .slide-content .item-footer {
+    padding: 0 1rem 1rem;
+  }
+}
+.cid-sWoTFwmYkM .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-sWoTFwmYkM .mbr-section-title {
+  color: #232323;
+}
+.cid-sWoTFwmYkM .mbr-text,
+.cid-sWoTFwmYkM .mbr-section-btn {
+  text-align: left;
+}
+.cid-sWoTFwmYkM .item-title {
+  text-align: left;
+}
+.cid-sWoTFwmYkM .item-subtitle {
+  text-align: left;
+}
+.cid-sWoTFwmYkM .embla__slide {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-width: 410px;
+  max-width: 410px;
+}
+@media (max-width: 768px) {
+  .cid-sWoTFwmYkM .embla__slide {
+    min-width: 70%;
+    max-width: initial;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
+}
+.cid-sWoTFwmYkM .embla__button--next,
+.cid-sWoTFwmYkM .embla__button--prev {
+  display: flex;
+}
+.cid-sWoTFwmYkM .embla__button {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .cid-sWoTFwmYkM .embla__button {
+    display: none;
+  }
+}
+.cid-sWoTFwmYkM .embla__button:disabled {
+  cursor: default;
+  display: none;
+}
+.cid-sWoTFwmYkM .embla__button:hover {
+  background: #000;
+  color: rgba(255, 255, 255, 0.5);
+}
+.cid-sWoTFwmYkM .embla__button.embla__button--prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sWoTFwmYkM .embla__button.embla__button--next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-sWoTFwmYkM .embla__button {
+    top: auto;
+  }
+}
+.cid-sWoTFwmYkM .embla {
+  position: relative;
+  width: 100%;
+}
+.cid-sWoTFwmYkM .embla__viewport {
   overflow: hidden;
+  width: 100%;
+}
+.cid-sWoTFwmYkM .embla__viewport.is-draggable {
+  cursor: grab;
+}
+.cid-sWoTFwmYkM .embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+.cid-sWoTFwmYkM .embla__container {
+  display: flex;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.cid-sWoTJMxnIe {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sWoTJMxnIe img,
+.cid-sWoTJMxnIe .item-img {
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-sWoTJMxnIe .item:focus,
+.cid-sWoTJMxnIe span:focus {
+  outline: none;
+}
+.cid-sWoTJMxnIe .item-wrapper {
+  position: relative;
+}
+.cid-sWoTJMxnIe .slide-content {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  overflow: hidden;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-sWoTJMxnIe .slide-content .item-content {
+    padding: 2rem 2rem 0;
+  }
+  .cid-sWoTJMxnIe .slide-content .item-footer {
+    padding: 0 2rem 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sWoTJMxnIe .slide-content .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-sWoTJMxnIe .slide-content .item-footer {
+    padding: 0 1rem 1rem;
+  }
+}
+.cid-sWoTJMxnIe .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-sWoTJMxnIe .mbr-section-title {
+  color: #232323;
+}
+.cid-sWoTJMxnIe .mbr-text,
+.cid-sWoTJMxnIe .mbr-section-btn {
+  text-align: center;
+}
+.cid-sWoTJMxnIe .item-title {
+  text-align: center;
+}
+.cid-sWoTJMxnIe .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
+.cid-sWoTJMxnIe .embla__slide {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-width: 410px;
+  max-width: 410px;
+}
+@media (max-width: 768px) {
+  .cid-sWoTJMxnIe .embla__slide {
+    min-width: 70%;
+    max-width: initial;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
+}
+.cid-sWoTJMxnIe .embla__button--next,
+.cid-sWoTJMxnIe .embla__button--prev {
+  display: flex;
+}
+.cid-sWoTJMxnIe .embla__button {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .cid-sWoTJMxnIe .embla__button {
+    display: none;
+  }
+}
+.cid-sWoTJMxnIe .embla__button:disabled {
+  cursor: default;
+  display: none;
+}
+.cid-sWoTJMxnIe .embla__button:hover {
+  background: #000;
+  color: rgba(255, 255, 255, 0.5);
+}
+.cid-sWoTJMxnIe .embla__button.embla__button--prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sWoTJMxnIe .embla__button.embla__button--next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-sWoTJMxnIe .embla__button {
+    top: auto;
+  }
+}
+.cid-sWoTJMxnIe .embla {
+  position: relative;
+  width: 100%;
+}
+.cid-sWoTJMxnIe .embla__viewport {
+  overflow: hidden;
+  width: 100%;
+}
+.cid-sWoTJMxnIe .embla__viewport.is-draggable {
+  cursor: grab;
+}
+.cid-sWoTJMxnIe .embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+.cid-sWoTJMxnIe .embla__container {
+  display: flex;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
