--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1783,3 +1783,218 @@ a {
   -khtml-user-select: none;
   -webkit-tap-highlight-color: transparent;
 }
+.cid-sWoWsMQD4S {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-sWoWsMQD4S .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-sWoWsMQD4S .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+@media (max-width: 767px) {
+  .cid-sWoWsMQD4S .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+.cid-sWoWu7oOPd {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #fafafa;
+}
+.cid-sWoWu7oOPd .card:not(:nth-last-child(1)) {
+  margin-bottom: 2rem;
+}
+.cid-sWoWu7oOPd .card-wrapper {
+  background-color: #ffffff;
+  border-radius: 4px;
+}
+.cid-sWoWu7oOPd .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sWoWu7oOPd .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-sWoWu7oOPd .social-row .soc-item .mbr-iconfont {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+  transition: all 0.3s;
+}
+.cid-sWoWu7oOPd .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-sWoWu7oOPd .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-sWoWu7oOPd .card-box {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) {
+  .cid-sWoWu7oOPd .card-box {
+    padding-right: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sWoWu7oOPd .card-box {
+    padding-left: 2rem;
+    padding-right: 4rem;
+  }
+}
+.cid-sWoWwkqd2F {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sWoWwkqd2F .embla__slide {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  min-width: 570px;
+  max-width: 570px;
+}
+@media (max-width: 768px) {
+  .cid-sWoWwkqd2F .embla__slide {
+    min-width: 70%;
+    max-width: initial;
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
+}
+.cid-sWoWwkqd2F .embla__button--next,
+.cid-sWoWwkqd2F .embla__button--prev {
+  display: flex;
+}
+.cid-sWoWwkqd2F .embla__button {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .cid-sWoWwkqd2F .embla__button {
+    display: none;
+  }
+}
+.cid-sWoWwkqd2F .embla__button:disabled {
+  cursor: default;
+  display: none;
+}
+.cid-sWoWwkqd2F .embla__button:hover {
+  background: #000;
+  color: rgba(255, 255, 255, 0.5);
+}
+.cid-sWoWwkqd2F .embla__button.embla__button--prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sWoWwkqd2F .embla__button.embla__button--next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 768px) {
+  .cid-sWoWwkqd2F .embla__button {
+    top: auto;
+  }
+}
+.cid-sWoWwkqd2F .user_image {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto 2rem auto;
+}
+.cid-sWoWwkqd2F .user_image .item-wrapper {
+  width: 200px;
+  height: 200px;
+}
+.cid-sWoWwkqd2F .user_image img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+@media (max-width: 230px) {
+  .cid-sWoWwkqd2F .user_image {
+    width: 100%;
+    height: auto;
+  }
+}
+.cid-sWoWwkqd2F .embla {
+  position: relative;
+  width: 100%;
+}
+.cid-sWoWwkqd2F .embla__viewport {
+  overflow: hidden;
+  width: 100%;
+}
+.cid-sWoWwkqd2F .embla__viewport.is-draggable {
+  cursor: grab;
+}
+.cid-sWoWwkqd2F .embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+.cid-sWoWwkqd2F .embla__container {
+  display: flex;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.cid-sWoWBZuNbn {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sWoWBZuNbn .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sWoWBZuNbn .mbr-section-title,
+.cid-sWoWBZuNbn .mbr-section-subtitle,
+.cid-sWoWBZuNbn .mbr-text {
+  text-align: center;
+}
+.cid-sWoWI3UcRv {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-sWoWI3UcRv .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sWoWI3UcRv .row {
+  flex-direction: row-reverse;
+}
+.cid-sWoWI3UcRv img {
+  width: 100%;
+}
