--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1362,7 +1362,7 @@ a {
 .cid-sWoTECBqyd {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background: #fafafa;
+  background: #ffffff;
 }
 .cid-sWoTECBqyd .team-card {
   margin-bottom: 2rem;
@@ -1529,18 +1529,12 @@ a {
 }
 @media (min-width: 992px) {
   .cid-sWoTFwmYkM .slide-content .item-content {
-    padding: 2rem 2rem 0;
-  }
-  .cid-sWoTFwmYkM .slide-content .item-footer {
-    padding: 0 2rem 2rem;
+    padding: 2rem;
   }
 }
 @media (max-width: 991px) {
   .cid-sWoTFwmYkM .slide-content .item-content {
-    padding: 1rem 1rem 0;
-  }
-  .cid-sWoTFwmYkM .slide-content .item-footer {
-    padding: 0 1rem 1rem;
+    padding: 1rem;
   }
 }
 .cid-sWoTFwmYkM .mbr-section-btn {
