--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1992,3 +1992,40 @@ a {
 .cid-sWoWI3UcRv img {
   width: 100%;
 }
+.cid-mY0NvrY1wM {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #efefef;
+}
+.cid-mY0NvrY1wM .mbr-section {
+  text-align: center;
+  color: #fff;
+}
+.cid-mY0NvrY1wM .cont {
+  background-color: #efefef;
+}
+.cid-mY0NvrY1wM .card {
+  background-color: #7f1933;
+  color: #efefef;
+  padding: 5px;
+  padding-bottom: 5px;
+}
+.cid-mY0NvrY1wM .slidehead {
+  font-size: 25px;
+}
+.cid-mY0NvrY1wM .hw2 {
+  width: 70%;
+  max-width: 50px;
+}
+.cid-mY0NvrY1wM .vatshipblock {
+  display: block;
+}
+.cid-mY0NvrY1wM .vatshipnone {
+  display: none;
+}
+.cid-mY0NvrY1wM .btn {
+  font-size: 10px;
+}
+.cid-mY0NvrY1wM H3 {
+  color: #232323;
+}
